# mandelbrod

./: CMakeLists.txt  Label.h  begin.cpp  begin.h  begin.ui  complex.cpp  complex.h  jullian.cpp  jullian.h  main.cpp  mainwindow.cpp  mainwindow.h
